syntax = "proto3";

package education.code.codeedu;

option go_package = "pb";

message UserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserResponse {
    string token = 1;
}

message UserAuthRequest {
    string email = 1;
    string password = 2;
}

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse) {};
    rpc Auth(UserAuthRequest) returns (UserResponse) {};
}